# ember

./: CMakeLists.txt  vcpkg.json
ember/: CMakeLists.txt
ember/ember-core/: CMakeLists.txt
ember/ember-core-tests/: CMakeLists.txt
ember/ember-core-tests/src/: precompiled.h
ember/ember-core-tests/src/component/: container.cpp
ember/ember-core-tests/src/fixture/: qt_fixture.h
ember/ember-core-tests/src/hex/: hex.cpp
ember/ember-core-tests/src/util/: abstract_storage.cpp  algorithm_util.cpp  allocator_util.cpp  compile_definitions.cpp  dynamic_value.cpp  file_util.cpp  message_manager.cpp  module_manager.cpp  resource_util.cpp  user_settings.cpp  variant_storage.cpp  vector.cpp
ember/ember-core/src/component/: component_container.h  component_object.h
ember/ember-core/src/editor/: editor_actions.h  editor_application.cpp  editor_application.h  editor_context.h  editor_main.h  editor_messages.h  editor_scene_view.h  editor_theme.h  editor_window.cpp  editor_window.h
ember/ember-core/src/graph/: graph_editor.cpp  graph_editor.h  graph_model.h  graph_view.h  node_model.h  node_view.h
ember/ember-core/src/grid/: hex_pos.h  hex_util.h  hex_view.h
ember/ember-core/src/icon/: icon_font_engine.h  icon_font_factory.h  impl_font_awesome.h
ember/ember-core/src/module/: module_base.h  module_defaults.h  module_dockable.h  module_registry.h
ember/ember-core/src/module/built_in/inspector/: inspector_dock.h  inspector_manager.h  inspector_view_empty.h
ember/ember-core/src/module/built_in/network/: network_manager.h
ember/ember-core/src/module/built_in/undo_stack/: undo_dock.h  undo_stack.h
ember/ember-core/src/module/built_in/user_settings/: user_settings_dialog.h  user_settings_manager.h  user_settings_section.h
ember/ember-core/src/precompiled/: precompiled.h  precompiled_std.h
ember/ember-core/src/qt/: button_types.h  connection.h  flow_layout.h  graphics_view_zoom.h  theme.h  widget_detail.h  widget_helpers.h
ember/ember-core/src/util/: abstract_storage.h  algorithm_util.h  allocator_util.h  dynamic_base.h  dynamic_value.h  file_util.h  log_framework.cpp  log_framework.h  message_manager.h  module_registry.h  object_selection.h  resource_util.h  settings_storage.h  singleton.h  uncopyable.h  variant_storage.h  vector.h
ember/ember-core/src/views/: about_dialog.h  version_widget.h  widget_gallery.cpp  widget_gallery.h
ember/ember-core/src/widgets/: dockable.h  icon.h  label.h  toolbar.h
scripts/cmake/: conan_dependencies.cmake  configure.cmake  project_settings.cmake
